# OtakuNeko

./: .env.example  .gitignore  2026-05-11-log.md  LICENSE  README.md  Run.bat  Run.sh  Run.vbs  Setup.bat  Setup.sh  app.py  architecture_report.html  architecture_report.md  bangumi_collection.json  bangumi_search.json  bangumi_subject.json  calendar.json  check_collection_table.py  check_streamlit_version.py  collection.json  collection_subject.json  dev_infra.bat  docker-compose.yml  package.json  packages.txt  qb.json  requirements.txt  start_all.bat  start_all.sh  start_docker.bat  start_docker.sh  subject_characters.json  test_api.py  test_bangumi_updated_at.py  test_batch_upsert.py  test_conversion.py  test_database.py  test_empty_data_fix.py  test_no_data_update.py  test_sync_api.py  (+5 more)
backend/: .env.example  API 调用方法文档.md  Dockerfile  LOGGING_CONFIGURATION.md  QUICK_START.md  TECHNICAL_DOCUMENTATION.md  alembic.ini  checkpoints.db-shm  checkpoints.db-wal  package-lock.json  pyproject.toml  requirements.txt  test_anime_staff_cast.py  test_api.py  test_auth_refactoring.py  test_bangumi_client.py  test_bgm_sync.py  test_collections_api.py  test_fetch_audience_reviews.py  test_get_anime_info.py  test_schema_refactoring.py  test_sync.py  test_user_profile_service.py  test_user_profile_tool.py
backend/alembic/: env.py
backend/alembic/versions/: 2739cf766725_add_source_and_source_id_fields_to_.py  (+2 more)
backend/app/: main.py
backend/app/agents/: README.md  graph.py  tools.py
backend/scripts/: cleanup_empty_subjects.py
backend/tests/: douban2bgm.py  test_user_service.py
(+295 files in other folders)
