[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "anyio>=4.0.0",
    "asyncpg>=0.31.0",
    "certifi>=2024.2.2",
    "click>=8.1.0",
    "concurrent-log-handler>=0.9.20",
    "fastapi>=0.109.0",
    "fastapi-cache2>=0.2.2",
    "httpx>=0.26.0",
    "openai>=2.20.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "redis>=7.1.1",
    "sqlalchemy>=2.0.25",
    "sqlmodel>=0.0.16",
    "uvicorn[standard]>=0.27.0",
]
